Bug 419409. MSAA/IAccessible2 broken in gmail. This fixes the crash part of the problem. r=marcoz, a=beltzner